cd/app_eks_ingress_class.yml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  labels:
    app.kubernetes.io/name: aws-load-balancer-controller
  name: alb
  namespace: nagp
spec:
  controller: ingress.k8s.aws/alb
