cd/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: nagp
  labels:
    environment: production
    project: k8demo
