cd/app_minikube_ingress_controller_service.yml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: nagp
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: https
      port: 443
      targetPort: https
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
