cd/app_service.yml
apiVersion: v1
kind: Service
metadata:
  name: fastapp-service
  namespace: nagp
spec:
  selector:
    app: fastapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
