cd/de_headless_service.yml
apiVersion: v1
kind: Service
metadata:
  name: db-headless-service
  namespace: nagp
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  clusterIP: None
