cd/app_minikube_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapp-ingress
  namespace: nagp
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fastapp-service
            port:
              number: 80
